# mkdocs-text-export-plugin

./: CHANGELOG.md  LICENSE  PLAN.md  README.md  REFACTOR_FILELIST.txt  REFACTOR_SPLITTING.md  RELEASE.md  TODO.md  llms.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  version.py
.github/workflows/: ci.yml
docs/: mkdocs.yml
docs/docs/: index.md  options.md  theme_handlers.md
docs/theme-handler/: cinder.py
mkdocs_plugin_toplaintext/: plugin.py  renderer.py
mkdocs_plugin_toplaintext/preprocessor/links/: util.py
mkdocs_plugin_toplaintext/themes/: generic.py
mkdocs_text_export_plugin/: __init__.py  plugin.py  preprocessor.py  renderer.py
mkdocs_text_export_plugin/preprocessor/: __init__.py  prep.py
mkdocs_text_export_plugin/preprocessor/links/: __init__.py  transform.py  util.py
mkdocs_text_export_plugin/themes/: basictheme.py  cinder.py  generic.py  material.py
scripts/: build.sh  release.sh  test.sh
tests/: __init__.py  test_plugin.py  test_version.py
