[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-text-export-plugin"
dynamic = ["version"]
description = "An MkDocs plugin to export content pages as plain-text or Markdown files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adam Twardoch", email = "adam+github@twardoch.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.3.0",
    "html2text",
    "beautifulsoup4>=4.0.0",
    "html22text @ git+https://github.com/twardoch/html22text",
]
keywords = ["mkdocs", "txt", "plaintext", "markdown", "export"]

[project.urls]
Homepage = "https://github.com/twardoch/mkdocs-text-export-plugin"
Repository = "https://github.com/twardoch/mkdocs-text-export-plugin"
Issues = "https://github.com/twardoch/mkdocs-text-export-plugin/issues"

[project.entry-points."mkdocs.plugins"]
text-export = "mkdocs_text_export_plugin.plugin:MdTxtExportPlugin"

[tool.setuptools]
packages = ["mkdocs_text_export_plugin", "mkdocs_text_export_plugin.themes"]

[tool.setuptools.dynamic]
version = {attr = "mkdocs_text_export_plugin.__init__.__version__"}

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true